[package]
name = "rust-blog"
version = "0.1.0"
authors = ["Satvik Shukla <sshukla9@cs.washington.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.4"

futures = "0.3.1"
env_logger = "0.7.1"
bytes = "0.5"
serde = "1.0.104"
bcrypt = "0.6.1"
mysql = "17.0.0"
